experimental/seaweedfs/istio/istio-authorization-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: seaweedfs-service
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: seaweedfs
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/ml-pipeline
    to:
    - operation:
        ports: ["8333"]
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/ml-pipeline-ui
    to:
    - operation:
        ports: ["8333"]
  # Allow traffic from User Pipeline Pods, which don't have a sidecar.
  - {}
#---
# This one doesn't seem to work. If its there, it will match for all requests
#apiVersion: security.istio.io/v1beta1
#kind: AuthorizationPolicy
#metadata:
#  name: seaweedfs-service-no-istio
#spec:
#  action: DENY
#  selector:
#    matchLabels:
#      app: seaweedfs
#  rules:
#  # Allow traffic from User Pipeline Pods, which don't have a sidecar.
#  - from:
#    - source:
#        notPrincipals:
#          - cluster.local/ns/kubeflow/sa/seaweedfs
#    to:
#    - operation:
#        ports: ["8888", "9333", "18888", "19333"]
---
apiVersion: "networking.istio.io/v1alpha3"
kind: DestinationRule
metadata:
  name: ml-pipeline-seaweedfs
spec:
  host: minio-service.kubeflow.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: seaweedfs-config
spec:
  action: ALLOW
  selector:
    matchLabels:
      app: seaweedfs
  rules:
  - from:
    - source:
        principals:
        - cluster.local/ns/kubeflow/sa/seaweedfs
